--- a/partials/home.html
+++ b/partials/home.html
@@ -1,6 +1,8 @@
-<h1>Welcome!</h1>
+<div class="text-center">
+  <h1>Welcome!</h1>
 
-<h3>Showing up is half the battle.</h3>
+  <h3>Showing up is half the battle.</h3>
 
-<button class="btn btn-success" ui-sref="signin">Sign In</button>
-<button class="btn btn-primary" ui-sref="roster">Who's Here</button>
+  <button class="btn btn-success" ui-sref="signin">Sign In</button>
+  <button class="btn btn-primary" ui-sref="roster">Who's Here</button>
+</div>
